--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,4 @@ Escribir manual de usuario +Documentacion
 Diagramar conexiones eléctricas
 x Contradicción que permite combinar babor/estribor y avante/retroceso
 x Modificados pines de motores centrales(Ahora están en 30,31,32 y 33)
+x Se crea un firmware modificado con los motores invertidos
